# human

components/: esp_dl_path.py
components/face_detction/: esp_dl_face_postprocessors_wrapper.cpp  face_detection.cpp  human_face_detect_wrapper.cpp
components/face_detection/: __init__.py  create_embeds.py  face_detection.cpp  face_detection.h  face_detection_build.py  human_face_detect_espdl_embed.c  human_face_recognition_wrapper.cpp
components/face_detection/extra/: esp_dl_recognition_wrapper.cpp
components/human_face_detect/: app_humanface_detect.cpp  human_face_detect.cpp  human_face_detect.hpp
components/human_face_recognition/: CMakeLists.txt  Kconfig  human_face_recognition.cpp  human_face_recognition.hpp  idf_component.yml
